Adding footer stuff

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,32 @@
             </ul>
         </main>
 
+        <footer class="site-footer">
+            <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
+            <div class="inner tentacle-thing">
+                <div class="info">
+                    <div class="foot-head">
+                        About
+                    </div>
+                    I'm a human from San Francisco.
+                    <br /><br />Follow me on
+                    <a href="https://twitter.com/andrewray" target="_blank">Twitter</a> or
+                    <a href="https://github.com/AndrewRayCode" target="_blank">GitHub</a>, or
+                    check out my <a href="http://andrewray.me" target="_blank">portfolio</a>.
+                </div>
+            </div>
+            <div class="postscript">
+                <div class="inner">
+                    <div class="ray"></div>
+                    <div class="copy">
+                        &copy; Andrew Ray 2017
+                        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                        Blog by <a href="https://ghost.org" target="_blank">Ghost</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
