--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
                     </a>
                     <a href="https://twitter.com/andrewray" target="_blank" class="my-face">
                         <span class="face-icon"></span>
-                        <span class="icon-twitter twitter-nav" target="_blank">@andrewray</span>
+                        <span class="icon-twitter twitter-nav" target="_blank">
+                            <span class="fa fa-twitter">
+                            @andrewray
+                        </span>
                     </a>
                 </div>
             </div>
@@ -52,7 +55,6 @@
         </main>
 
         <footer class="site-footer">
-            <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
             <div class="inner tentacle-thing">
                 <div class="info">
                     <div class="foot-head">
