--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                     <a href="https://twitter.com/andrewray" target="_blank" class="my-face">
                         <span class="face-icon"></span>
                         <span class="icon-twitter twitter-nav" target="_blank">
-                            <span class="fa fa-twitter">
+                            <span class="fa fa-twitter"></span>
                             @andrewray
                         </span>
                     </a>
