--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Hello</title>
+        <title>Andrew Ray's Portfolio</title>
     </head>
     <body>
         <header class="site-head">
