--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
     <head>
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="HandheldFriendly" content="True" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Andrew Ray's Portfolio</title>
     </head>
     <body>
