--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
         </main>
 
         <footer class="site-footer">
-            <div class="inner tentacle-thing">
+            <div class="inner tentacle-thing clearfix">
                 <div class="info">
                     <div class="foot-head">
                         About
